Knot Resolver 5.5.0 (2022-mm-dd)
================================

Improvements
------------
- extended_errors: module for extended DNS error support, RFC8914 (!1234)
- policy: new action policy.IPTRACE for logging request origin (!1239)

Incompatible changes
--------------------
- libknot >= 3.0.2 is required


Knot Resolver 5.4.3 (2021-12-01)
================================

Improvements
------------
- lua: add kres.parse_rdata() to parse RDATA from string to wire format (!1233)
- lua: add policy.domains() for exact domain name matching (!1228)

Bugfixes
--------
- policy.rpz: fix origin detection in files without $ORIGIN (!1215)
- lua: log() works again; broken in 5.4.2 (!1223)
- policy: correctly include EDNS0 previously omitted by some actions (!1230)
- edns_keepalive: module is now properly loaded (!1229, thanks Josh Soref!)


Knot Resolver 5.4.2 (2021-10-13)
================================

Improvements
------------
- dns64 module: also map the reverse (PTR) subtree (#478, !1201)
- dns64 module: allow disabling based on client address (#368, !1201)
- dns64 module: allow configuring AAAA subnets not allowed in answer (!1201)
- nameserver selection algorithm: improve IPv6 avoidance if broken (!1207)

Bugfixes
--------
- lua: log() output is visible with default log level again (!1208)
- build: fix when knot-dns headers are on non-standard location (!1210)


Knot Resolver 5.4.1 (2021-08-19)
================================

Improvements
------------
- docker: base image on Debian 11 (!1203)

Bugfixes
--------
- fix build without doh2 support after 5.4.0 (!1197)
- fix policy.DEBUG* logging and -V/--version after 5.4.0 (!1199)
- doh2: ensure memory from unsent streams is freed (!1202)


Knot Resolver 5.4.0 (2021-07-29)
================================

Improvements
------------
- fine grained logging and syslog support (!1181)
- expose HTTP headers for processing DoH requests (!1165)
- improve assertion mechanism for debugging (!1146)